--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ nav {
 nav img {
     height: 28.5vw;
     width: 80vw;
+    border-radius: 5px;
 }
 
 nav ul {
@@ -80,6 +81,7 @@ section {
     position: relative;
     overflow: hidden;
     margin-bottom: 30px;
+    border-radius: 10%;
 }
 
 .projet img {
@@ -180,6 +182,12 @@ section {
     margin-bottom: 30px;
 }
 
+.projets-personnels video {
+    height: 40vh;
+    width: 70vw;
+    align-items: center;
+}
+
 .projets-personnels .projet {
     display: inline-block;
     margin-bottom: 30px;
@@ -259,6 +267,15 @@ section {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.github img {
+    position: fixed;
+    bottom: 50px;
+    right: 20px;
+    height: 9%;
+    width: 8.5%;
+    border-radius: 50%;
 }
 
 footer {
